# carmen-era

./: CMakeLists.txt  changelog
conf/: era.ini
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  era_ipc.c  era_ipc.h
src/lib/interface/: CMakeLists.txt  era_interface.c  era_interface.h  era_messages.h
src/lib/params/: CMakeLists.txt  era_params.c  era_params.h
trunk/carmen-era/: CMakeLists.txt  era_messages.h
trunk/carmen-era-python/sandbox/: arm_config_pub.py
trunk/carmen-era-python/src/: era_comm.i
trunk/carmen-era-python/src/era_comm/: arm_config_publisher.h  communications_base.cpp  publisher.h
trunk/carmen-era/src/: CMakeLists.txt
trunk/carmen-era/src/carmen-era/: era_interface.c  era_interface.h  era_trajectory.c
trunk/carmen/era/: Makefile  era.c  era_interface.c  era_interface.h  era_ipc.c  era_messages.h  era_params.c  era_params.h  era_trajectory.c
trunk/carmen/era-python/: CMakeLists.txt
trunk/carmen/era-python/sandbox/: arm_config_sub.py
trunk/carmen/era-python/src/: CMakeLists.txt
trunk/carmen/era-python/src/era_comm/: arm_config_publisher.cpp  arm_config_subscriber.cpp  arm_config_subscriber.h  communications_base.h  era_comm.cpp  era_comm.h  subscriber.h
trunk/config/: Makefile  config.c  config.h
